--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Citizen's Bank</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="/sass/style.css" />
-    <title>Citizen's Bank</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <!--LOGO-->
@@ -36,7 +40,7 @@
     <!--Center Page Text-->
     <div class="centerpage">
       <h2>Get the Citizens advantage.</h2>
-      <hr/>
+      <hr />
       <h3>Unique products</h3>
       <p>
         Our loan programs offer a variety of solutions to help you compete
@@ -45,7 +49,7 @@
         products that give you a competitive edge.
       </p>
       <a href="#">Learn more about our products.</a>
-      <hr/>
+      <hr />
       <h2>
         Exceptional support
       </h2>
@@ -55,12 +59,55 @@
         program reaches prospects in the market for a mortgage, while our
         loyalty mail program will keep you in touch with current customers.
       </p>
+      <hr />
+      <h2>Closing on-time, every time</h2>
+      <p>
+        We expanded our regional operations centers to help to support you and
+        take care of paperwork during closing time. Our one-team "pod"
+        operations approach helps you create satisfied customers and referral
+        sources.
+      </p>
+      <hr />
+      <h2>You'll have a voice</h2>
+      <p>
+        In order to give our customers the best service, we’ll give you a real
+        voice in how we operate. Through our Sales Advisory Board, Sales
+        Conferences, and our Top Producers Council, you can drive real change in
+        the company.
+      </p>
     </div>
     <!--Bottom Page -->
+    
   </body>
+
+  <!--Footer-->
   <footer>
-    <div class="social-links"></div>
-    <div class="disclaimer"></div>
-    <div class="copyright"></div>
+    <div class="social-links">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <a href="#" class="fa fa-youtube"></a>
+    </div>
+
+    <div class="disclaimer">
+      <p>
+        It is the policy of Citizens Bank to provide equal employment and
+        advancement opportunities to all colleagues and applicants for
+        employment without regard to race, color, ethnicity, religion, gender,
+        pregnancy/childbirth, age, national origin, sexual orientation, gender
+        identity or expression, disability or perceived disability, genetic
+        information, citizenship, veteran or military status, marital or
+        domestic partner status, or any other category protected by federal,
+        state and/or local laws. Equal Opportunity & Affirmative Action Employer
+        Disabled/Veteran-Citizens Bank is a brand name of Citizens Bank, N.A.
+        and each of its respective subsidiaries, and Citizens Bank of
+        Pennsylvania. Click here to review "EEO Is The Law" poster. For
+        additional information, click here.
+      </p>
+    </div>
+
+    <div class="privacy">
+      Privacy Statement | Site Map
+    </div>
   </footer>
 </html>
