--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <div class="banner-image">
         <img src="img/images/BannerImage.png" />
       </div>
+      <div class="vector-graphic">
+        <img src="img/images/Shape 1@1X.png" />
+      </div>
       <div class="banner-text">
         <h2>
           Our Investment in you.
@@ -77,9 +80,53 @@
       </p>
     </div>
     <!--Bottom Page -->
-    
+    <div class="box-breakpoint">
+      <h2 style="background-color: #00945f; text-align: center;">
+        Citizens Bank and Citizens One Home Loans
+      </h2>
+      <p style="background-color: #ebf7f5; text-align: center;">
+        The Home Lending Solutions division operates under the Citizens Bank
+        brand within our banking footprint: Massachusetts, Rhode Island,
+        Connecticut, New Hampshire, Vermont, New York, New Jersey, Pennsylvania,
+        Delaware, Ohio and Michigan. Outside of this footprint, we market our
+        home lending products under the Citizens One Home Loans brand and
+        actively recruit loan officers in the following states: Illinois,
+        Indiana, Kentucky, Maryland, Virginia, North Carolina and South
+        Carolina, as well as in Washington, D.C.
+      </p>
+    </div>
+    <div class="profile1">
+      <img src="img/images/Guy 1.png" />
+      <img src="img/images/Qoutation Marks.png" />
+      <p>
+        “Citizens Bank is in a growth mode. We're planning to be around for the
+        long term and we're proving that by growing sales."
+      </p>
+      <p>- Ed, Mortgage Loan Officer in Buffalo</p>
+    </div>
+    <div class="profile2">
+      <img src="img/images/Guy 2.png" />
+      <img src="img/images/Qoutation Marks.png" />
+      <p>
+        “The senior management is very committed to the mortgage lending
+        business on every level – from the top, down. We’re all going in the
+        same direction and that’s what I like. So, if I have a question or idea,
+        I can get answers. They listen and we get things done. They are really
+        investing to grow the mortgage business."
+      </p>
+      <p>- Mark, Senior Mortgage Loan Officer in Chicago</p>
+    </div>
+    <div class="profile3">
+      <img src="img/images/Guy 3.png" />
+      <img src="img/images/Qoutation Marks.png" />
+      <p>
+        “It is so great to be part of an organization that is looking for
+        solutions and creativity versus creating barriers that cause problems."
+      </p>
+      <p>- John, Mortgage Loan Officer in Charleston</p>
+    </div>
   </body>
-
+  <hr />
   <!--Footer-->
   <footer>
     <div class="social-links">
