tried and failed at some css, more research needed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Citizen's Bank</title>
+  <title>Citizens Bank</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -12,13 +12,14 @@
 
 <body>
 
-  <!--LOGO-->
+<!--LOGO-->
 
   <div class="logo">
-    <img class="logo-img" src="img/images/logo.png" />
+    <a href="#"><img class="logo-img" src="img/images/logo.png" alt="the citizens bank logo" /> </a>
   </div>
 
-  <!--BANNER-->
+<!--BANNER-->
+
   <section class="banner">
     <div class="banner-image">
       <img class="lady-image" src="img/images/BannerImage.png" alt="a business woman smiling" />
@@ -45,7 +46,8 @@
     </div>
   </section>
 
-  <!--About Text-->
+<!--About Text-->
+
 <section class="about">
   <div class="about-center">
     <h2>Get the Citizens advantage.</h2>
@@ -94,9 +96,11 @@
     </p>
   </div>
 </section>
-  <!--Employee Testimony -->
+
+<!--Employee Testimony -->
+
   <section class="employee-testimony">
-    <div class="box-breakpoint">
+    <div class="box-break">
       <h2 style="background-color: #00945f; text-align: center;">
         Citizens Bank and Citizens One Home Loans
       </h2>
@@ -144,7 +148,9 @@
 </section>
 </body>
 <hr />
+
 <!--Footer-->
+
 <footer>
   <div class="social-links">
     <a href="#" class="fa fa-facebook"></a>
@@ -165,8 +171,8 @@
       state and/or local laws. Equal Opportunity & Affirmative Action Employer
       Disabled/Veteran-Citizens Bank is a brand name of Citizens Bank, N.A.
       and each of its respective subsidiaries, and Citizens Bank of
-      Pennsylvania. Click here to review "EEO Is The Law" poster. For
-      additional information, click here.
+      Pennsylvania. <a href="#">Click here to review "EEO Is The Law" poster.</a> For
+      additional information, <a href="#">click here.</a>
     </p>
   </div>
 
