all sorts of stuff

--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="/sass/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body>
 
-<!--LOGO-->
+  <!--LOGO-->
 
   <div class="logo">
     <a href="#"><img class="logo-img" src="img/images/logo.png" alt="the citizens bank logo" /> </a>
   </div>
 
-<!--BANNER-->
+  <!--BANNER-->
 
   <section class="banner">
     <div class="banner-image">
       <img class="lady-image" src="img/images/BannerImage.png" alt="a business woman smiling" />
     </div>
     <div class="vector-graphic">
-      <img class="vector-image" src="img/images/Shape 1@1X.png" alt="a green overlay for the picture of the smiling woman" />
+      <img class="vector-image" src="img/images/Shape 1@1X.png"
+        alt="a green overlay for the picture of the smiling woman" />
     </div>
     <div class="banner-text">
       <h2>
@@ -46,58 +47,58 @@
     </div>
   </section>
 
-<!--About Text-->
+  <!--About Text-->
 
-<section class="about">
-  <div class="about-center">
-    <h2>Get the Citizens advantage.</h2>
-  </div>
+  <section class="about">
+    <div class="about-center">
+      <h2>Get the Citizens advantage.</h2>
+    </div>
     <hr />
-  <div class="unique-products">
-    <h3>Unique products</h3>
-    <p>
-      Our loan programs offer a variety of solutions to help you compete
-      effectively across a broad spectrum of borrowers. With our strong
-      balance sheet, we can offer great conventional and portfolio loan
-      products that give you a competitive edge.
-    </p>
-    <a href="#">Learn more about our products.</a>
-  </div>
+    <div class="unique-products">
+      <h3>Unique products</h3>
+      <p>
+        Our loan programs offer a variety of solutions to help you compete
+        effectively across a broad spectrum of borrowers. With our strong
+        balance sheet, we can offer great conventional and portfolio loan
+        products that give you a competitive edge.
+      </p>
+      <a href="#">Learn more about our products.</a>
+    </div>
     <hr />
-  <div class="exceptional-support">
-    <h2>
-      Exceptional support
-    </h2>
-    <p>
-      We’ll support you in generating leads and marketing, as well as
-      implementing technology and secondary marketing. Our Lead Advantage
-      program reaches prospects in the market for a mortgage, while our
-      loyalty mail program will keep you in touch with current customers.
-    </p>
-  </div>
+    <div class="exceptional-support">
+      <h2>
+        Exceptional support
+      </h2>
+      <p>
+        We’ll support you in generating leads and marketing, as well as
+        implementing technology and secondary marketing. Our Lead Advantage
+        program reaches prospects in the market for a mortgage, while our
+        loyalty mail program will keep you in touch with current customers.
+      </p>
+    </div>
     <hr />
-  <div class="closing-time">
-    <h2>Closing on-time, every time</h2>
-    <p>
-      We expanded our regional operations centers to help to support you and
-      take care of paperwork during closing time. Our one-team "pod"
-      operations approach helps you create satisfied customers and referral
-      sources.
-    </p>
-  </div>
+    <div class="closing-time">
+      <h2>Closing on-time, every time</h2>
+      <p>
+        We expanded our regional operations centers to help to support you and
+        take care of paperwork during closing time. Our one-team "pod"
+        operations approach helps you create satisfied customers and referral
+        sources.
+      </p>
+    </div>
     <hr />
-  <div class="voice">
-    <h2>You'll have a voice</h2>
-    <p>
-      In order to give our customers the best service, we’ll give you a real
-      voice in how we operate. Through our Sales Advisory Board, Sales
-      Conferences, and our Top Producers Council, you can drive real change in
-      the company.
-    </p>
-  </div>
-</section>
+    <div class="voice">
+      <h2>You'll have a voice</h2>
+      <p>
+        In order to give our customers the best service, we’ll give you a real
+        voice in how we operate. Through our Sales Advisory Board, Sales
+        Conferences, and our Top Producers Council, you can drive real change in
+        the company.
+      </p>
+    </div>
+  </section>
 
-<!--Employee Testimony -->
+  <!--Employee Testimony -->
 
   <section class="employee-testimony">
     <div class="box-break">
@@ -115,44 +116,44 @@
         Carolina, as well as in Washington, D.C.
       </p>
     </div>
-  <div class="profile-1">
-    <img class="ed" src="img/images/Guy 1.png" alt="a picture of Ed, Mortgage Loan Officer in Buffalo" />
-    <img class="quotation-mark" src="img/images/Qoutation Marks.png" alt="quotation mark picture" />
-    <p>
-      “Citizens Bank is in a growth mode. We're planning to be around for the
-      long term and we're proving that by growing sales."
-    </p>
-    <p>- Ed, Mortgage Loan Officer in Buffalo</p>
-  </div>
-  <div class="profile-2">
-    <img class="mark" src="img/images/Guy 2.png" alt="a picture of Mark, Senior Mortgage Loan Officer in Chicago" />
-    <img class="quotation-mark" src="img/images/Qoutation Marks.png" alt="quotation mark picture" />
-    <p>
-      “The senior management is very committed to the mortgage lending
-      business on every level – from the top, down. We’re all going in the
-      same direction and that’s what I like. So, if I have a question or idea,
-      I can get answers. They listen and we get things done. They are really
-      investing to grow the mortgage business."
-    </p>
-    <p>- Mark, Senior Mortgage Loan Officer in Chicago</p>
-  </div>
-  <div class="profile-3">
-    <img class="john" src="img/images/Guy 3.png" alt="a picture of John, Mortgage Loan Officer in Charleston" />
-    <img class="quotation-mark" src="img/images/Qoutation Marks.png" alt="quotation mark picture" />
-    <p>
-      “It is so great to be part of an organization that is looking for
-      solutions and creativity versus creating barriers that cause problems."
-    </p>
-    <p>- John, Mortgage Loan Officer in Charleston</p>
-  </div>
-</section>
+    <div class="profile-1">
+      <img class="ed" src="img/images/Guy 1.png" alt="a picture of Ed, Mortgage Loan Officer in Buffalo" />
+      <img class="quotation-mark" src="img/images/Qoutation Marks.png" alt="quotation mark picture" />
+      <p>
+        “Citizens Bank is in a growth mode. We're planning to be around for the
+        long term and we're proving that by growing sales."
+      </p>
+      <p>- Ed, Mortgage Loan Officer in Buffalo</p>
+    </div>
+    <div class="profile-2">
+      <img class="mark" src="img/images/Guy 2.png" alt="a picture of Mark, Senior Mortgage Loan Officer in Chicago" />
+      <img class="quotation-mark" src="img/images/Qoutation Marks.png" alt="quotation mark picture" />
+      <p>
+        “The senior management is very committed to the mortgage lending
+        business on every level – from the top, down. We’re all going in the
+        same direction and that’s what I like. So, if I have a question or idea,
+        I can get answers. They listen and we get things done. They are really
+        investing to grow the mortgage business."
+      </p>
+      <p>- Mark, Senior Mortgage Loan Officer in Chicago</p>
+    </div>
+    <div class="profile-3">
+      <img class="john" src="img/images/Guy 3.png" alt="a picture of John, Mortgage Loan Officer in Charleston" />
+      <img class="quotation-mark" src="img/images/Qoutation Marks.png" alt="quotation mark picture" />
+      <p>
+        “It is so great to be part of an organization that is looking for
+        solutions and creativity versus creating barriers that cause problems."
+      </p>
+      <p>- John, Mortgage Loan Officer in Charleston</p>
+    </div>
+  </section>
 </body>
 <hr />
 
 <!--Footer-->
 
 <footer>
-  <div class="social-links">
+  <div class="social-icons">
     <a href="#" class="fa fa-facebook"></a>
     <a href="#" class="fa fa-twitter"></a>
     <a href="#" class="fa fa-linkedin"></a>
