added scss pages - working on design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/scss/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
@@ -29,10 +29,10 @@
         alt="a green overlay for the picture of the smiling woman" />
     </div>
     <div class="banner-text">
-      <h2>
+      <h1>
         Our Investment in you.
-      </h2>
-      <br />
+      </h1>
+      <hr />
       <p>
         As a Mortgage Loan Officer with Citizens, you’ll work directly with
         your customers, walking them through our unique product suite. You’ll
@@ -51,11 +51,11 @@
 
   <section class="about">
     <div class="about-center">
-      <h2>Get the Citizens advantage.</h2>
+      <h1>Get the Citizens advantage.</h1>
     </div>
     <hr />
     <div class="unique-products">
-      <h3>Unique products</h3>
+      <h2>Unique products</h2>
       <p>
         Our loan programs offer a variety of solutions to help you compete
         effectively across a broad spectrum of borrowers. With our strong
@@ -64,7 +64,7 @@
       </p>
       <a href="#">Learn more about our products.</a>
     </div>
-    <hr />
+
     <div class="exceptional-support">
       <h2>
         Exceptional support
@@ -76,7 +76,7 @@
         loyalty mail program will keep you in touch with current customers.
       </p>
     </div>
-    <hr />
+
     <div class="closing-time">
       <h2>Closing on-time, every time</h2>
       <p>
@@ -86,7 +86,7 @@
         sources.
       </p>
     </div>
-    <hr />
+
     <div class="voice">
       <h2>You'll have a voice</h2>
       <p>
@@ -102,10 +102,10 @@
 
   <section class="employee-testimony">
     <div class="box-break">
-      <h2 style="background-color: #00945f; text-align: center;">
+      <h2>
         Citizens Bank and Citizens One Home Loans
       </h2>
-      <p style="background-color: #ebf7f5; text-align: center;">
+      <p>
         The Home Lending Solutions division operates under the Citizens Bank
         brand within our banking footprint: Massachusetts, Rhode Island,
         Connecticut, New Hampshire, Vermont, New York, New Jersey, Pennsylvania,
