cleared folders and fixed images

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 
   <section class="banner">
     <div class="banner-image">
-      <img class="lady-image" src="img/images/BannerImage.png" alt="a business woman smiling" />
-    </div>
-    <div class="vector-graphic">
-      <img class="vector-image" src="img/images/Shape 1@1X.png"
-        alt="a green overlay for the picture of the smiling woman" />
+      <img class="lady-image" src="img/images2/images/vector_smart_object.jpg" alt="a business woman smiling" />
     </div>
     <div class="banner-text">
       <h1>
