semi finished about section moving onto testimony

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <h1>
           Our investment in you.
         </h1>
+        <hr />
         <p>
           As a Mortgage Loan Officer with Citizens, you’ll work directly with
           your customers, walking them through our unique product suite. You’ll
@@ -60,47 +61,47 @@
         <h1>Get the Citizens advantage.</h1>
       </div>
       <hr />
-      <div class="unique-products">
-        <h2>Unique products</h2>
-        <p>
-          Our loan programs offer a variety of solutions to help you compete
-          effectively across a broad spectrum of borrowers. With our strong
-          balance sheet, we can offer great conventional and portfolio loan
-          products that give you a competitive edge.
-        </p>
-        <a href="#">Learn more about our products.</a>
-      </div>
-
-      <div class="exceptional-support">
-        <h2>
-          Exceptional support
-        </h2>
-        <p>
-          We’ll support you in generating leads and marketing, as well as
-          implementing technology and secondary marketing. Our Lead Advantage
-          program reaches prospects in the market for a mortgage, while our
-          loyalty mail program will keep you in touch with current customers.
-        </p>
-      </div>
-
-      <div class="closing-time">
-        <h2>Closing on-time, every time</h2>
-        <p>
-          We expanded our regional operations centers to help to support you and
-          take care of paperwork during closing time. Our one-team "pod"
-          operations approach helps you create satisfied customers and referral
-          sources.
-        </p>
-      </div>
-
-      <div class="voice">
-        <h2>You'll have a voice</h2>
-        <p>
-          In order to give our customers the best service, we’ll give you a real
-          voice in how we operate. Through our Sales Advisory Board, Sales
-          Conferences, and our Top Producers Council, you can drive real change
-          in the company.
-        </p>
+      <div class="flex-container">
+        <div class="unique-products">
+          <h2>Unique products</h2>
+          <p>
+            Our loan programs offer a variety of solutions to help you compete
+            effectively across a broad spectrum of borrowers. With our strong
+            balance sheet, we can offer great conventional and portfolio loan
+            products that give you a competitive edge. <a href="#">Learn more about our products.</a>
+          </p>
+        </div>
+        <div class="vl"></div>
+        <div class="exceptional-support">
+          <h2>
+            Exceptional support
+          </h2>
+          <p>
+            We’ll support you in generating leads and marketing, as well as
+            implementing technology and secondary marketing. Our Lead Advantage
+            program reaches prospects in the market for a mortgage, while our
+            loyalty mail program will keep you in touch with current customers.
+          </p>
+        </div>
+        <div class="closing-time">
+          <h2>Closing on-time, every time</h2>
+          <p>
+            We expanded our regional operations centers to help to support you
+            and take care of paperwork during closing time. Our one-team "pod"
+            operations approach helps you create satisfied customers and
+            referral sources.
+          </p>
+        </div>
+        <div class="vl"></div>
+        <div class="voice">
+          <h2>You'll have a voice</h2>
+          <p>
+            In order to give our customers the best service, we’ll give you a
+            real voice in how we operate. Through our Sales Advisory Board,
+            Sales Conferences, and our Top Producers Council, you can drive real
+            change in the company.
+          </p>
+        </div>
       </div>
     </section>
 
@@ -122,6 +123,7 @@
           South Carolina, as well as in Washington, D.C.
         </p>
       </div>
+      <div class="flex-container">
       <div class="profile-1">
         <img
           class="ed"
@@ -178,6 +180,7 @@
         <p>- John, Mortgage Loan Officer in Charleston</p>
       </div>
     </section>
+  </div>
   </body>
   <hr />
 
