--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h1>Get the Citizens advantage.</h1>
       </div>
       <hr />
-      <div class="flex-container">
+      <div class="flex-container-1">
         <div class="unique-products">
           <h2>Unique products</h2>
           <p>
@@ -71,7 +71,7 @@
             products that give you a competitive edge. <a href="#">Learn more about our products.</a>
           </p>
         </div>
-        <div class="vl"></div>
+        <hr class="vl" />
         <div class="exceptional-support">
           <h2>
             Exceptional support
@@ -123,7 +123,7 @@
           South Carolina, as well as in Washington, D.C.
         </p>
       </div>
-      <div class="flex-container">
+      <div class="flex-container-2">
       <div class="profile-1">
         <img
           class="ed"
