--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
   <!--LOGO-->
 
   <div class="logo">
@@ -122,39 +123,50 @@
 
     <div class="flex-container-3">
       <div class="profile-1">
-        <img class="ed" src="img/images/Guy 1.png" alt="a picture of Ed, Mortgage Loan Officer in Buffalo for Citizens Bank" />
-        <img class="quotation-mark" src="img/images/Quotation Marks.png" alt="quotation mark picture" />
-        <p>
-          “Citizens Bank is in a growth mode. We're planning to be around for
-          the long term and we're proving that by growing sales."
-        </p>
-        <h3>- Ed, Mortgage Loan Officer in Buffalo</h3>
+        <img class="ed" src="img/images/Guy 1.png"
+          alt="a picture of Ed, Mortgage Loan Officer in Buffalo for Citizens Bank" />
+        <div class="profile-1-quote">
+          <img class="quotation-mark" src="img/images/Quotation Marks.png" alt="quotation mark picture" />
+          <p>
+            “Citizens Bank is in a growth mode. We're planning to be around for
+            the long term and we're proving that by growing sales."
+          </p>
+          <h3>- Ed, Mortgage Loan Officer in Buffalo</h3>
+        </div>
+
       </div>
 
       <div class="profile-2">
-        <img class="mark" src="img/images/Guy 2.png" alt="a picture of Mark, Senior Mortgage Loan Officer in Chicago for Citizens Bank" />
-        <img class="quotation-mark" src="img/images/Quotation Marks.png" alt="quotation mark picture" />
-        <p>
-          “The senior management is very committed to the mortgage lending
-          business on every level – from the top, down. We’re all going in the
-          same direction and that’s what I like. So, if I have a question or
-          idea, I can get answers. They listen and we get things done. They are
-          really investing to grow the mortgage business."
-        </p>
-        <h3>- Mark, Senior Mortgage Loan Officer in Chicago</h3>
+        <img class="mark" src="img/images/Guy 2.png"
+          alt="a picture of Mark, Senior Mortgage Loan Officer in Chicago for Citizens Bank" />
+        <div class="profile-2-quote">
+          <img class="quotation-mark" src="img/images/Quotation Marks.png" alt="quotation mark picture" />
+          <p>
+            “The senior management is very committed to the mortgage lending
+            business on every level – from the top, down. We’re all going in the
+            same direction and that’s what I like. So, if I have a question or
+            idea, I can get answers. They listen and we get things done. They are
+            really investing to grow the mortgage business."
+          </p>
+          <h3>- Mark, Senior Mortgage Loan Officer in Chicago</h3>
+        </div>
       </div>
 
       <div class="profile-3">
-        <img class="john" src="img/images/Guy 3.png" alt="a picture of John, Mortgage Loan Officer in Charleston for Citizens Bank" />
-        <img class="quotation-mark" src="img/images/Quotation Marks.png" alt="quotation mark picture" />
-        <p>
-          “It is so great to be part of an organization that is looking for
-          solutions and creativity versus creating barriers that cause
-          problems."
-        </p>
-        <h3>- John, Mortgage Loan Officer in Charleston</h3>
+        <img class="john" src="img/images/Guy 3.png"
+          alt="a picture of John, Mortgage Loan Officer in Charleston for Citizens Bank" />
+        <div class="profile-3-quote">
+          <img class="quotation-mark" src="img/images/Quotation Marks.png" alt="quotation mark picture" />
+          <p>
+            “It is so great to be part of an organization that is looking for
+            solutions and creativity versus creating barriers that cause
+            problems."
+          </p>
+          <h3>- John, Mortgage Loan Officer in Charleston</h3>
+        </div>
       </div>
     </div>
+
   </section>
 </body>
 
