more css changes

--- a/index.html
+++ b/index.html
@@ -173,34 +173,36 @@
 <!--Footer-->
 
 <footer>
-  <hr class="hr3" />
-  <div class="social-icons">
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-youtube"></a>
-  </div>
+  <hr />
+  <div class="footer-flex">
+    <div class="social-icons">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <a href="#" class="fa fa-youtube"></a>
+    </div>
 
-  <div class="disclaimer">
-    <p>
-      It is the policy of Citizens Bank to provide equal employment and
-      advancement opportunities to all colleagues and applicants for
-      employment without regard to race, color, ethnicity, religion, gender,
-      pregnancy/childbirth, age, national origin, sexual orientation, gender
-      identity or expression, disability or perceived disability, genetic
-      information, citizenship, veteran or military status, marital or
-      domestic partner status, or any other category protected by federal,
-      state and/or local laws. Equal Opportunity & Affirmative Action Employer
-      Disabled/Veteran-Citizens Bank is a brand name of Citizens Bank, N.A.
-      and each of its respective subsidiaries, and Citizens Bank of
-      Pennsylvania.
-      <a href="#">Click here to review "EEO Is The Law" poster.</a> For
-      additional information, <a href="#">click here.</a>
-    </p>
-  </div>
+    <div class="disclaimer">
+      <p>
+        It is the policy of Citizens Bank to provide equal employment and
+        advancement opportunities to all colleagues and applicants for
+        employment without regard to race, color, ethnicity, religion, gender,
+        pregnancy/childbirth, age, national origin, sexual orientation, gender
+        identity or expression, disability or perceived disability, genetic
+        information, citizenship, veteran or military status, marital or
+        domestic partner status, or any other category protected by federal,
+        state and/or local laws. Equal Opportunity & Affirmative Action Employer
+        Disabled/Veteran-Citizens Bank is a brand name of Citizens Bank, N.A.
+        and each of its respective subsidiaries, and Citizens Bank of
+        Pennsylvania.
+        <a href="#">Click here to review "EEO Is The Law" poster.</a> For
+        additional information, <a href="#">click here.</a>
+      </p>
+    </div>
 
-  <div class="privacy">
-    Privacy Statement | Site Map
+    <div class="privacy">
+      Privacy Statement | Site Map
+    </div>
   </div>
 </footer>
 
