--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </div>
 
     <div class="privacy">
-      Privacy Statement | Site Map
+      <a href="#">Privacy Statement</a> | <a href="#">Site Map</a>
     </div>
   </div>
 </footer>
